--- a/index.html
+++ b/index.html
@@ -9,27 +9,34 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="display"></div>
+      <div class="row">
+        <div class="display"></div>
+        <button class="back">C</button>
+      </div>
       <div class="row">
         <button class="one">1</button>
         <button class="two">2</button>
-        <button class="three">3</button><button>+</button>
+        <button class="three">3</button>
+        <button class="add">+</button>
       </div>
       <div class="row">
         <button class="four">4</button>
         <button class="five">5</button>
-        <button class="six">6</button><button>-</button>
+        <button class="six">6</button>
+        <button class="subtract">-</button>
       </div>
       <div class="row">
         <button class="seven">7</button>
         <button class="eight">8</button>
-        <button class="nine">9</button><button>*</button>
+        <button class="nine">9</button>
+        <button class="multiply">*</button>
       </div>
       <div class="row">
         <button class="clear">Clear</button>
-        <button>0</button>
-        <button>=</button>
-        <button>/</button>
+        <button class="zero">0</button>
+        <button class="float">.</button>
+        <button class="equal">=</button>
+        <button class="divide">/</button>
       </div>
     </div>
   </body>
