I haven't been redeemed yet

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <button class="clear">Clear</button>
         <button class="number">0</button>
-        <button class="number">.</button>
+        <button class="float">.</button>
         <button class="equal">=</button>
         <button class="operator">/</button>
       </div>
