--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="row">
+      <div class="row" id="row">
         <div class="display"></div>
+        <button class="back">C</button>
       </div>
-      <div class="row">
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="operator">+</button>
-      </div>
-      <div class="row">
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="operator">-</button>
-      </div>
-      <div class="row">
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="operator">*</button>
-      </div>
-      <div class="row">
-        <button class="clear">Clear</button>
-        <button class="number">0</button>
-        <button class="float">.</button>
-        <button class="equal">=</button>
-        <button class="operator">/</button>
+          <div class="row">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">+</button>
+          </div>
+          <div class="row">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">-</button>
+          </div>
+          <div class="row">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">*</button>
+          </div>
+          <div class="row">
+            <button class="clear">Clear</button>
+            <button class="number">0</button>
+            <button class="float">.</button>
+            <button class="equal">=</button>
+            <button class="operator">/</button>
       </div>
     </div>
   </body>
