--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button class="clear">Clear</button>
             <button class="number">0</button>
             <button class="float">.</button>
-            <button class="equal">=</button>
+            <button id="equal">=</button>
             <button class="operator">/</button>
       </div>
     </div>
